--- a/MedsTracker2/app/src/main/res/layout/fragment_list_view.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_list_view.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.cdu.medstracker.ListViewFragment">
 
     <ListView
-        android:id="@+id/bookListView"
+        android:id="@+id/drugListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layoutAnimation="@anim/card_layout_animation">
