--- a/MedsTracker2/app/src/main/res/values/dimens.xml
+++ b/MedsTracker2/app/src/main/res/values/dimens.xml
@@ -6,4 +6,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="cardview_text_size">16sp</dimen>
+    <dimen name="cardview_header_text_size">24sp</dimen>
+    <dimen name="cardview_padding">8dp</dimen>
+    <dimen name="cardview_elevation">2dp</dimen>
+    <dimen name="cardview_corner_radius">5dp</dimen>
+    <dimen name="cardview_margin">2dp</dimen>
 </resources>
