--- a/MedsTracker2/app/src/main/res/layout/fragment_take_photo.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_take_photo.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_photo_camera_black_24dp"
+        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
         android:id="@+id/takePicture"
         android:layout_marginBottom="8dp"
         android:layout_alignParentBottom="true"
