--- a/MedsTracker2/app/src/main/res/menu/activity_main_drawer.xml
+++ b/MedsTracker2/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,17 +6,12 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_location_city_black_24dp"
-            android:title="@string/app_name"
+            android:title="Home"
             app:itemTextAppearance="?android:attr/textAppearanceLarge"/>
         <item
             android:id="@+id/nav_your_drugs"
             android:icon="@drawable/ic_local_library_black_24dp"
             android:title="Your drugs" />
-
-        <item
-            android:id="@+id/nav_add_photo"
-            android:icon="@drawable/ic_add_a_photo_black_24dp"
-            android:title="Add Photo" />
 
         <item
             android:id="@+id/nav_drugs_guide"
