--- a/MedsTracker/app/src/main/res/layout/nav_header_main.xml
+++ b/MedsTracker/app/src/main/res/layout/nav_header_main.xml
@@ -14,19 +14,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
-        android:src="@drawable/pills_dispenser"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
+        android:src="@drawable/medlogo"/>
 
 
 </LinearLayout>
