--- a/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_view_pager_content.xml
@@ -1,20 +1,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        tools:context="com.example.install.medstracker.ViewPagerContentFragment">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:id="@+id/imageViewPager"/>
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        tools:context="com.example.cdu.medstracker.ViewPagerContentFragment">
 
         <TextView
             android:layout_width="match_parent"
@@ -22,13 +17,40 @@
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
+            android:layout_marginTop="8dp"
             android:textAlignment="center"
             android:id="@+id/textViewPagerHeader"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:id="@+id/imageViewPager"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
             android:id="@+id/textViewPagerBody"/>
+
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/viewPagerTextView"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
 
     </LinearLayout>
 </ScrollView>
