--- a/MedsTracker2/app/src/main/res/layout/fragment_view_pager_controller.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_view_pager_controller.xml
@@ -21,14 +21,16 @@
         android:layout_height="108dp"
         android:id="@+id/left_nav"
         android:layout_marginLeft="8dp"
-        android:layout_gravity="center_vertical|left"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="top|left"
         app:srcCompat="@drawable/ic_chevron_left_black_24dp"
         />
 
     <ImageButton
         android:layout_width="38dp"
         android:layout_height="108dp"
-        android:layout_gravity="center_vertical|right"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="top|right"
         android:layout_marginRight="8dp"
         android:id="@+id/right_nav"
         app:srcCompat="@drawable/ic_chevron_right_black_24dp"
