--- a/MedsTracker2/app/src/main/res/values/dimens.xml
+++ b/MedsTracker2/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="cardview_elevation">2dp</dimen>
     <dimen name="cardview_corner_radius">5dp</dimen>
     <dimen name="cardview_margin">2dp</dimen>
+
+    <dimen name="viewpager_padding">8dp</dimen>
 </resources>
