--- a/MedsTracker2/app/src/main/res/layout/app_bar_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/app_bar_main.xml
@@ -25,10 +25,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"/>
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
                     android:textColor="#FFFFFF"
@@ -37,16 +40,10 @@
                     android:textSize="20sp"
                     android:id="@+id/toolbar_title" />
 
-                <!--<Space-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="0dp"-->
-                <!--android:layout_weight="3"/>-->
-
-
-                <!--<ImageView-->
-                <!--android:layout_width="@dimen/appBarImageWidth"-->
-                <!--android:layout_height="@dimen/appBarImageHeight"-->
-                <!--android:src="@drawable/greek_salad" />-->
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"/>
 
 
             </LinearLayout>
