--- a/MedsTracker2/app/src/main/res/values/colors.xml
+++ b/MedsTracker2/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#757575</color>
     <color name="colorAccent">#FF4081</color>
     <color name="backgroundColor">#D32F2F</color>
 
     <color name="navbar_color">#212121</color>
+    <color name="navbar_background_color">#FF5722</color>
 
     <color name="button_color">#FFEA00</color>
+
 
 
 </resources>
