--- a/MedsTracker2/app/src/main/res/values/colors.xml
+++ b/MedsTracker2/app/src/main/res/values/colors.xml
@@ -10,6 +10,17 @@
 
     <color name="button_color">#FFEA00</color>
 
+    <color name="textColor">#FFFFFF</color>
 
+    <color name="faqsColor">#5A7D78</color>
+    <color name="interactionsColor">#5E6E78</color>
+    <color name="errorsColor">#696996</color>
+    <color name="sideEffectsColor">#876996</color>
+    <color name="disposalColor">#966978</color>
+
+    <color name="whiteCardView">#FFFFFF</color>
+    <color name="yellowCardView">#F0F595</color>
+    <color name="brownCardView">#C38C5A</color>
+    <color name="roseCardView">#FF645A</color>
 
 </resources>
