--- a/MedsTracker2/app/src/main/res/layout/fragment_about.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_about.xml
@@ -1,13 +1,35 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.cdu.medstracker.AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
+        android:text="@string/ABOUT"
+        android:textSize="40dp"
+        android:textAlignment="center"/>
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:textColor="#FFFFFF"
+        android:text="@string/about_text"
+        android:textSize="20dp"
+        android:padding="20dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#FFFFFF"
+        android:text="@string/about_text2"
+        android:textSize="20dp"
+        android:padding="20dp"/>
+</LinearLayout>
+</ScrollView>
