--- a/MedsTracker2/app/src/main/res/layout/fragment_main.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_main.xml
@@ -30,6 +30,7 @@
         <Button
             android:layout_width="match_parent"
             android:text="Your Drugs"
+            android:id="@+id/buttonDrugs"
             android:textColor="#FFFFFF"
             android:layout_margin="10dp"
             android:backgroundTint="@color/colorPrimary"
@@ -37,6 +38,7 @@
         <Button
             android:layout_width="match_parent"
             android:text="Phone"
+            android:id="@+id/buttonPhone"
             android:textColor="#FFFFFF"
             android:backgroundTint="@color/colorPrimary"
             android:layout_margin="10dp"
