--- a/MedsTracker2/app/src/main/res/values-v21/styles.xml
+++ b/MedsTracker2/app/src/main/res/values-v21/styles.xml
@@ -9,4 +9,16 @@
 
         <item name="android:navigationBarColor">@color/navbar_color</item>
     </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="android:windowBackground">@android:color/transparent</item>-->
+        <item name="android:colorBackground">@color/backgroundColor</item>
+        <item name="android:statusBarColor">?android:attr/colorForeground</item>
+
+
+    </style>
 </resources>
