--- a/MedsTracker2/app/src/main/res/layout/preference_header_layout.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_header_layout.xml
@@ -9,27 +9,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:background="@drawable/rectangle"
-        android:orientation="horizontal"
-        android:layout_weight="1">
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/ic_color_lens_black_24dp"/>
+            app:srcCompat="@drawable/ic_photo_black_24dp"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
-            android:text="Phone List color"
+            android:text="Image sources"
             android:textColor="@color/textColor"
             android:textStyle="bold"
-            android:textSize="18sp"
-            />
+            android:textSize="@dimen/cardview_header_text_size" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10"/>
 
     </LinearLayout>
 
