--- a/MedsTracker2/app/src/main/res/values-v21/styles.xml
+++ b/MedsTracker2/app/src/main/res/values-v21/styles.xml
@@ -4,10 +4,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@color/navbar_color</item>
+        <item name="android:statusBarColor">@android:color/black</item>
         <item name="android:colorBackground">@color/backgroundColor</item>
 
-        <item name="android:navigationBarColor">@color/navbar_color</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -17,7 +17,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <!--<item name="android:windowBackground">@android:color/transparent</item>-->
         <item name="android:colorBackground">@color/backgroundColor</item>
-        <item name="android:statusBarColor">?android:attr/colorForeground</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
 
 
     </style>
