--- a/MedsTracker2/app/src/main/res/values/colors.xml
+++ b/MedsTracker2/app/src/main/res/values/colors.xml
@@ -27,4 +27,7 @@
     <color name="brown">#96041E</color>
     <color name="white">#000000</color>
 
+    <color name="fab_color">#FFEA00</color>
+    <color name="fab_ripple_color">#00E676</color>
+
 </resources>
