--- a/MedsTracker2/app/src/main/res/layout/preference_pic_layout_beer.xml
+++ b/MedsTracker2/app/src/main/res/layout/preference_pic_layout_beer.xml
@@ -5,24 +5,23 @@
     android:layout_height="50dp">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:src="@drawable/forbidden_beer"
+        android:background="@color/textColor"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_weight="4"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
         android:lines="1"
         android:textColor="@color/textColor"
         android:textSize="@dimen/cardview_text_size"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
         android:ellipsize="end"
-        android:text="https://pixabay.com/en/beer-beer-mug-foam-the-thirst-1669298/"/>
+        android:text="https://pixabay.com/en/doctor-orange-medical-symbol-296571/"/>
 
 </LinearLayout>
